# langchain-playground

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
data/sample_docs/: agents_explained.txt  langchain_overview.txt  python_tips.txt
exercises/01_hello_llm/: concept.md  concept_cn.md  concepts.md  main.py
exercises/02_prompt_templates/: concept.md  concept_cn.md  concepts.md  main.py
exercises/03_chains_lcel/: concept.md  concept_cn.md  concepts.md  main.py
exercises/04_output_parsers/: concept.md  concept_cn.md  concepts.md  main.py
exercises/05_rag_basics/: concept.md  concept_cn.md  concepts.md  main.py
exercises/06_rag_advanced/: concept.md  concept_cn.md  concepts.md  main.py
exercises/07_memory/: concept.md  concept_cn.md  concepts.md  main.py
exercises/08_tools/: concept.md  concept_cn.md  concepts.md  main.py
exercises/09_agents/: concept.md  concept_cn.md  concepts.md  main.py
exercises/10_streaming/: concept.md  concept_cn.md  concepts.md  main.py
exercises/11_callbacks/: concept.md  concept_cn.md  concepts.md  main.py
exercises/12_langgraph_basics/: concept.md  concept_cn.md  concepts.md  main.py
exercises/13_langgraph_advanced/: concept.md  concept_cn.md  concepts.md  main.py
exercises/14_production_patterns/: concept.md  concept_cn.md  concepts.md  main.py
exercises/15_langsmith/: concept.md  concept_cn.md  concepts.md  main.py
exercises/16_bedrock/: concept.md  concept_cn.md  concepts.md  main.py
shared/: bedrock.py  embeddings.py  llm.py
